src/objects/Team_Member_MERC__c.object
<CustomObject>
    <fields>
        <fullName>Account_Employee_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this record an account employee and thus will be displayed with Account Employees on the Meeting Team Manager page.</description>
        <inlineHelpText>Is this record an account employee and thus will be displayed with Account Employees on the Meeting Team Manager page.</inlineHelpText>
        <label>Account Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to Account so Person Accounts may be selected as Team Members a Meeting. Created 9/27/2013 by KLorenti</description>
        <label>Customer Facing/Other Team Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <infoMessage>If you cannot find the record you&apos;re looking for.  Select the &quot;All Fields&quot; option to search across additional criteria.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_MERC__c</fullName>
        <description>Tracks Role of Team Members for a Meeting. Created 9/30/2013 by KLorenti.</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Facing Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Budget Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Event Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local CMS Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local CMS Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Planning Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Attendance Checker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Meeting Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Agent</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>External_User_MERC</fullName>
        <active>true</active>
        <description>Used to add Customer Facing Team members and Medical Directors to grant access to the meeting in Veeva.</description>
        <label>Non-Mercury Users</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mercury_User_MERC</fullName>
        <active>true</active>
        <description>Used to add Meeting Planning Company, Travel Agency, Account Mangers</description>
        <label>Mercury Users</label>
    </recordTypes>
</CustomObject>